@@ -1,0 +1,20 @@
+{
+  "backup_data_uid": "27a634aee4fef9ec",
+  "backup_module_uid": "032630d041b4fd8a",
+  "backup_module_uoa": "module",
+  "control": {
+    "author": "Grigori Fursin",
+    "author_email": "Grigori.Fursin@cTuning.org",
+    "author_webpage": "http://fursin.net",
+    "copyright": "See CK COPYRIGHT.txt for copyright details",
+    "engine": "CK",
+    "iso_datetime": "2021-06-04T13:46:19.160721",
+    "license": "See CK LICENSE.txt for licensing details",
+    "version": [
+      "2",
+      "5",
+      "1"
+    ]
+  },
+  "data_name": "mlperf.result"
+}
