@@ -1,6 +1,7 @@
 * V2.5.3.1
   * added support to automatically add simple packages from Git:
     ck add package:my-git-repo --git={URL} --tags=my-repo --env_ext=MY_GIT_REPO
+  * added module:mlperf.result to abstract official MLPerf results
 
 * V2.5.3
   * added "pull" function to module:docker
